tests/negative/class_variable_type.lu
require "godot"

class Counter
  @@count: Integer = 0

  def initialize: void
    @@count = "wrong"
  end
end

class Main < Node
  def ready: void
    counter: Counter = Counter.new
  end
end
